<resources>
    <string name="app_name">HospitalElEden</string>
    <string name="apellido">Apellido</string>
    <string name="celular">Celular</string>
    <string name="contrase_a">Contraseña</string>
    <string name="direccion">Direccion</string>
    <string name="e_mail">E-Mail</string>
    <string name="identificacion">Identificacion</string>
    <string name="inicio">Inicio</string>
    <string name="regresar">Regresar</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>

    <string-array name="tipoCita">
        <item>Seleccione Opcion</item>
        <item>Prioritaria</item>
        <item>General</item>
        <item>Especialista</item>
    </string-array>

    <string-array name="tipoEspe">
        <item>Seleccione Opcion</item>
        <item>Cardiologia</item>
        <item>Alergologia</item>
        <item>Ginecologia</item>
    </string-array>
    <string-array name="tipoCitaHisto">
        <item>Solicitado</item>
        <item>Procesada</item>
        <item>Cancelada</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
